// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable basic.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            React.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Vue.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Angular.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Solid.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Svelte.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Javascript
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                语言
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-6"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            PReact.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        />
      </div>
      <div
        id="DndDescribedBy-6"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-6"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable disable-all.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-5"
        aria-disabled="true"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        style="cursor: not-allowed; color: rgb(194, 198, 204);"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(194, 198, 204); font-size: 16px;"
          />
          <div>
            React.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-5"
        aria-disabled="true"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        style="cursor: not-allowed; color: rgb(194, 198, 204);"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(194, 198, 204); font-size: 16px;"
          />
          <div>
            Vue.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-5"
        aria-disabled="true"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        style="cursor: not-allowed; color: rgb(194, 198, 204);"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(194, 198, 204); font-size: 16px;"
          />
          <div>
            Angular.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        id="DndDescribedBy-5"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-5"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable disable-item.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-4"
        aria-disabled="true"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        style="color: red; cursor: not-allowed;"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(194, 198, 204); font-size: 16px;"
          />
          <div>
            Javascript
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                语言
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-4"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            React.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-4"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Vue.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-4"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Angular.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        id="DndDescribedBy-4"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-4"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable dragging-style.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-3"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Javascript
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                语言
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-3"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            React.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-3"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Vue.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-3"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            Angular.js
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                框架
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        id="DndDescribedBy-3"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-3"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable event.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-2"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            技术部
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        />
      </div>
      <div
        aria-describedby="DndDescribedBy-2"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            云平台部
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        />
      </div>
      <div
        aria-describedby="DndDescribedBy-2"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            业务一部
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        />
      </div>
      <div
        aria-describedby="DndDescribedBy-2"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            业务二部
          </div>
        </div>
        <div
          class="ms-sortable-item-right"
        />
      </div>
      <div
        id="DndDescribedBy-2"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-2"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable render.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          style="padding: 0px 8px;"
        >
          JavaScript -- 前端
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          style="padding: 0px 8px;"
        >
          React.js -- 前端
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          style="padding: 0px 8px;"
        >
          设计模式 -- 通用
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          style="padding: 0px 8px;"
        >
          Docker -- 通用
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          style="padding: 0px 8px;"
        >
          Java -- 后端
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          style="padding: 0px 8px;"
        >
          Go -- 后端
        </div>
      </div>
      <div
        id="DndDescribedBy-1"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-1"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;

exports[`MsSortable 组件 demo 测试 正确渲染 MsSortable top.tsx 1`] = `
<div>
  <div>
    <div>
      <div
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            技术部
          </div>
        </div>
        <div
          class="ms-sortable-item-right ms-sortable-item-show-top-icon"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                一级部门
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            云平台部
          </div>
        </div>
        <div
          class="ms-sortable-item-right ms-sortable-item-show-top-icon"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                二级部门
              </span>
            </span>
          </div>
          <div
            class="ms-sortable-item-top-wrapper"
          >
            <span
              class="anticon"
              role="img"
              style="color: rgb(96, 102, 110);"
            />
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            业务一部
          </div>
        </div>
        <div
          class="ms-sortable-item-right ms-sortable-item-show-top-icon"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                三级部门
              </span>
            </span>
          </div>
          <div
            class="ms-sortable-item-top-wrapper"
          >
            <span
              class="anticon"
              role="img"
              style="color: rgb(96, 102, 110);"
            />
          </div>
        </div>
      </div>
      <div
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="ms-sortable-item-container"
        role="button"
        tabindex="0"
      >
        <div
          class="ms-sortable-item-left"
        >
          <span
            class="anticon"
            role="img"
            style="color: rgb(120, 133, 143); font-size: 16px;"
          />
          <div>
            业务二部
          </div>
        </div>
        <div
          class="ms-sortable-item-right ms-sortable-item-show-top-icon"
        >
          <div
            class="ms-sortable-item-tag-wrapper"
          >
            <span
              class="ant-tag ms-status-tag"
              style="color: rgb(70, 79, 92); background: rgb(240, 241, 242);"
            >
              <span
                class="ms-status-text"
              >
                四级部门
              </span>
            </span>
          </div>
          <div
            class="ms-sortable-item-top-wrapper"
          >
            <span
              class="anticon"
              role="img"
              style="color: rgb(96, 102, 110);"
            />
          </div>
        </div>
      </div>
      <div
        id="DndDescribedBy-0"
        style="display: none;"
      >
        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
      </div>
      <div
        aria-atomic="true"
        aria-live="assertive"
        id="DndLiveRegion-0"
        role="status"
        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
      />
    </div>
  </div>
</div>
`;
